<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        style="@style/TextDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/add_pupil_title"
        android:textSize="20sp" />
    <ProgressBar
        android:id="@+id/pb_pupil_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pupil_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:accessibilityLiveRegion="polite"
        android:hint="@string/name_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_pupil_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:inputType="text"
            android:layout_gravity="center_horizontal|start"
            android:labelFor="@+id/til_pupil_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_country"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content"
        android:accessibilityLiveRegion="polite"
        android:hint="@string/country_hint"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_gravity="center_horizontal|start"
            android:labelFor="@+id/til_pupil_country" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pupil_image_url"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:accessibilityLiveRegion="polite"
        android:hint="@string/image_url_hint"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_pupil_image_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:inputType="text"
            android:layout_gravity="center_horizontal|start"
            android:labelFor="@+id/til_pupil_image_url" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pupil_latitude"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:accessibilityLiveRegion="polite"
        android:hint="@string/latitude_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_pupil_latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:inputType="numberDecimal"
            android:layout_gravity="center_horizontal|start"
            android:labelFor="@+id/til_pupil_latitude" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pupil_longitude"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:accessibilityLiveRegion="polite"
        android:hint="@string/longitude_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_pupil_longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:inputType="numberDecimal"
            android:layout_gravity="center_horizontal|start"
            android:labelFor="@+id/til_pupil_longitude" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_add_pupil"
        style="?android:borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_people"
        app:backgroundTint="@color/colorAccent" />



</LinearLayout>